--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -4,18 +4,18 @@
   --light: #fff;
 }
 body {
-  background-color: var(--dark);
+  background-color: #fff;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='199' viewBox='0 0 100 199'%3E%3Cg fill='%23ffffff' fill-opacity='0.1'%3E%3Cpath d='M0 199V0h1v1.99L100 199h-1.12L1 4.22V199H0zM100 2h-.12l-1-2H100v2z'%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
   color: var(--light);
-  font-family: monospace;
+  font-family: 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 1.5em;
   line-height: 1.5;
   margin: 0;
 }
 main {
-  max-width: 860px;
+  max-width: 85vw;
   margin: 10vh auto;
-  padding:0 2rem;
+  padding:0 1rem;
 }
 header {
   background-image: url(https://pm1.narvii.com/5816/d7ff4d38a7f87ddeb7490ce5a1a5552742c7ce8d_hq.jpg);
@@ -28,49 +28,108 @@ header {
   align-items: center;
   padding: 0 1.5rem 0;
 }
+article{
+  width: 100%;
+}
 h1 {
+  color: #fff;
   font-size: 7vw;
-  text-shadow: 2px 2px 10px rgba(252, 227, 0, 0.644);
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.644);
 }
 h2 {
   font-size: 2em;
   margin-top: 1.5em;
 }
-ul {
-  display: flex;
-  justify-content: space-between;
-  list-style-type: none;
-  padding: 0;
-  margin: 0 -1rem;
-}
-ul li {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 1rem;
-}
-ul img {
-  border: 2px solid var(--light);
-  margin-top: 2em;
-  margin-bottom: 2em;
-}
+
 img {
   max-width: 100%;
 }
-.results {
-  display: flex;
-  flex-wrap: wrap;
+.overview{
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
   max-width: 100%;
-  
+  grid-gap: 10px;
+}
+.results a {
+  background-color: #000;
+  position: relative;
+  text-decoration: none;
+  display: block;
+}
+.results p{
+  color: #fff;
+  padding: 0 1rem;
+}
+.results a::after{
+  border-bottom-color: transparent;
+  border-left-color: transparent;
+  border-right-color: #fff;
+  border-style: solid;
+  border-top-color: transparent;
+  border-width: 12px 12px 0 0;
+  bottom: 0;
+  content: "";
+  position: absolute;
+  right: 0;
+  top: auto;
+  z-index: 40;
+}
+.card-body{
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+  top: -10px;
+  line-height: 1;
+  z-index: 10;
+}
+
+.card-body:before{
+  background: #e62429;
+  bottom: 100%;
+  content: "";
+  height: 100%;
+  left: 0;
+  position: absolute;
+  transition: bottom .6s,-webkit-transform .6s;
+  width: 100%;
+  z-index: -1;
+}
+div:hover .card-body:before{
+  bottom: 0%;
+  border-top: 10px;
+  border-color: #e62429;
 }
 .results div{
-  padding: 0 1.5rem 0;
-  width: 10em;
+  background-color: #000;
+  height: 100%;
+  overflow: hidden;
 }
-.results img {
+.results a > div:after{
+  height: 4px;
+  content: "";
+  background-color: #e62429;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 210px;
+  z-index: 10;
+}
+
+.results a img {
   background-size: contain;
-  height: 6em;
-  width: 6em;
+  max-height: 210px;
+  width: 100%;
+  object-fit: cover;
+  position: relative;
+}
+
+.results .offset{
+  object-position: left;
+}
+.results img{
+  height: 10em;
+  width: 10em;
+  z-index: 0;
 }
 .block{
   display: block;
@@ -80,7 +139,11 @@ img {
   color: var(--dark);
   padding: 1em;
 }
-
+.comics{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
 .loading {
   position: absolute;
   top: 49%;
