--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1,8 +1,4 @@
-:root {
-  --dark: #000;
-  --course: #00B0FC;
-  --light: #fff;
-}
+
 body {
   background-color: #fff;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='199' viewBox='0 0 100 199'%3E%3Cg fill='%23ffffff' fill-opacity='0.1'%3E%3Cpath d='M0 199V0h1v1.99L100 199h-1.12L1 4.22V199H0zM100 2h-.12l-1-2H100v2z'%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
@@ -126,7 +122,7 @@ div:hover .card-body:before{
 .results .offset{
   object-position: left;
 }
-.results img{
+.results a img{
   height: 10em;
   width: 10em;
   z-index: 0;
@@ -139,10 +135,38 @@ div:hover .card-body:before{
   color: var(--dark);
   padding: 1em;
 }
+.herodetail{
+  background-color: #202020;
+  color: #fff;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 20px;
+}
+.herodetail img{
+  width: 100%;
+  height: auto;
+}
+.herodetail h3{
+  padding: 0 1rem;
+}
+.comics img{
+  height: 400px;
+  width: auto;
+  box-shadow: 4px 11px 11px 0 rgba(0, 0, 0, 0.644);
+  z-index: 10;
+}
 .comics{
+  margin-top: 3rem;
   width: 100%;
   display: flex;
   flex-wrap: wrap;
+}
+.comics p{
+  color: #202020;
+}
+.comics div{
+  background-color: transparent;
+  overflow: visible;
 }
 .loading {
   position: absolute;
