:sparkles: added debounce on the scroll event, :art: cleaned up most files

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -173,7 +173,10 @@ div:hover .card-body:before{
   top: 49%;
   left: 45%;
 }
-
+.loader2{
+  display: block;
+  margin: auto;
+}
 .hide {
   display: none;
 }
